--- a/BarryFish.html
+++ b/BarryFish.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>YOUR TITLE GOES HERE</title>
+        <title>Barry fish</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <!-- Uncomment to use external CSS
-        <link rel="stylesheet" href="PATH/TO/EXTERNAL/STYLES.CSS">
-        -->
+        <script>
+           function findcost()
+           var mybox1 =document.getElementById('bw').value;
+           var mybox2 =document.getElementById('fh').value;
+           var result =document.getElementById('result').value;
+           var myResult = mybox1 * mybox2;
+           result.innerHTML = myResult;
+        </script>
 
         <style type="text/css">
             /* Your CSS goes here */
@@ -14,14 +18,12 @@
     </head>
 
     <body>
-        <!-- Your HTML goes here -->
+      <form>
+        Barramundi Wild <input type="text" id="bw"/><br> Flathead Tails <input type="text" id="fh"/><br>
+        Rockling <input type="text" id="r"/><br>
+        Snapper Fillet <input type="text" id="sf"/><br>
+        Gummy Shark <input type="text" id="gs"/><br>
 
-        <!-- Uncomment to use external JavaScript
-        <script src="PATH/TO/EXTERNAL/SCRIPT.JS"></script>
-        -->
-
-        <script>
-            /* Your JS goes here */
-        </script>
+      </form>
     </body>
 </html>
